@@ -14,6 +14,8 @@ Revelation changelog
 
 	* added MyPasswordSafe import/export
 
+	* fix crashes in applet and with drag/drop on 64-bit systems
+
 2005-08-17  Erik Grinaker <erikg@codepoet.no>
 
 	* default lock timeout for applet set to 10 minutes
